--- a/public/assets/styles/components/landing-page/_landingpagefooter.scss
+++ b/public/assets/styles/components/landing-page/_landingpagefooter.scss
@@ -45,6 +45,7 @@
                 display: flex;
                 justify-content: center;
                 img{
+                    filter: brightness(0) saturate(100%) invert(0%) sepia(96%) saturate(7500%) hue-rotate(16deg) brightness(100%) contrast(106%);
                     width: auto;
                     height: 76px;
                 }
