LANDING PAGE : with zoho form

--- a/public/assets/styles/components/landing-page/_Hero.scss
+++ b/public/assets/styles/components/landing-page/_Hero.scss
@@ -19,7 +19,7 @@
         .form{
             width: 481px;
             height: 589px;
-            background-color: #FFFFFF;
+            background-color: transparent;
         }
     }
 
