--- a/public/assets/styles/components/landing-page/_landingpagefooter.scss
+++ b/public/assets/styles/components/landing-page/_landingpagefooter.scss
@@ -27,7 +27,7 @@
             width: 100%;
             height: auto;
             aspect-ratio: 1/1;
-            background: #FAFAFA;
+            background: transparent;
         }
 
         .links-and-contacts{
