Neha : Adding header and hero of landing page two

--- a/public/assets/styles/HomePage/_Hero.scss
+++ b/public/assets/styles/HomePage/_Hero.scss
@@ -4,6 +4,8 @@
   width: 100vw;
   height: 765px;
   font-family: Assistant;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   justify-content: center;
   flex-direction: column;
