--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -27,6 +27,8 @@
 @import "./components/landing-page/Navigation";
 @import "./components/landing-page/Hero";
 @import "./components/landing-page/faq";
+@import "./components/landing-page-two/Header";
+@import "./components/landing-page-two/Hero";
 
 
 
