--- a/public/assets/styles/components/landing-page-two/_Hero.scss
+++ b/public/assets/styles/components/landing-page-two/_Hero.scss
@@ -19,7 +19,7 @@
             color: #FFFFFF;
             letter-spacing: 0.2px;
             align-self: flex-start;
-            padding-top: 40px;
+            padding-top: 12px;
             h1{
                 font-size: 40px;
                 font-family: Montserrat;
@@ -35,12 +35,7 @@
             }
         }
         .form-div{
-            width: 481px;
-            height: 555px;
-            border: 0;
-            border-radius: 30px;
-            background-color: black;
-            background-color: #FFFFFF;
+            margin-top: -48px;
         }
     }
     .hero-bottom{
@@ -81,8 +76,7 @@
                 }
             }
             .form-div{
-                width: 310px;
-                height: 555px;
+                margin-top: 0px;
             }
         }
     }
