--- a/public/assets/styles/components/_flexible.scss
+++ b/public/assets/styles/components/_flexible.scss
@@ -13,6 +13,11 @@
     max-width: 1440px;
     margin: 0 auto;
     padding: 4rem 0;
+
+    @include mobile{
+      width: 100%;
+      padding: 2rem 0;
+    }
   }
 
 
@@ -62,11 +67,19 @@
           text-decoration: underline;
           background: transparent;
           text-decoration-color: #393939;
-          width: 300px;
+          width: 250px;
+          font-size: 14px;
         }
 
       }
     
+    }
+
+    @include tablet{
+      flex-direction: column;
+      gap: 1rem;
+
+      padding: 0 1rem;
     }
 
   }
@@ -120,6 +133,9 @@
     color: #393939;
 
     margin: 1.5rem  0;
+    @include mobile{
+      padding: 0 1rem;
+    }
   }
 
 
@@ -127,214 +143,166 @@
 
   .gridslider-container{
     display: flex;
-    flex-wrap: wrap;
-    margin-left: 10px;
-    margin-right: 10px;
+
+    @include mobile{
+      margin-left: 1rem;
+    }
+
+    .grid-slider{
+      display: grid;
+      gap: 1rem;
+      grid-template-columns: repeat(5, 1fr);
+      width: 100%;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+
+      
+
+      .grid-item{
+        display: flex;
+        flex-direction: column;
+        border-radius: 8px;
+        overflow: hidden;
+        cursor: pointer;
+
+        .image-container{
+          width: 100%;
+
+          img{
+            aspect-ratio: 1/1;
+            width: 100%;
+            height: auto;
+            object-fit: contain;
+          }
+        }
+
+        .grid-data{
+          padding: 1rem;
+          display: flex;
+          justify-content: space-between;
+          height: 100%;
+          flex-direction: column;
+          gap: 0.5rem;
+
+          .grid-data-desc{
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+
+            h4{
+              font-size: 18px;
+              font-weight: 400;
+              line-height: 24px;
+              text-align: left;
+            }
+  
+            .desc{
+              font-size: 16px;
+              font-weight: 400;
+              line-height: 20px;
+              text-align: left;
+            }
+  
+            .points{
+              display: flex;
+              gap: 0.5rem;
+  
+              p{
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 24px;
+                text-align: left;
+              }
+            }
+          }
+
+          .grid-data-cta{
+
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+            
+
+            .color-heading{
+              font-size: 18px;
+              font-weight: 400;
+              line-height: 24px;
+              text-align: left;
+              color: #008385;
+            }
+  
+            .buttons{
+              display: flex;
+              gap: 0.5rem;
+  
+              button{
+                padding: 5px 20px;
+                border-radius: 3rem;
+                border: 1px solid #2962FF;
+                opacity: 0px;
+                a{
+                  font-size: 14px;
+                  font-weight: 400;
+                  line-height: 24px;
+                  text-align: left;
+                  text-decoration: none;  
+                }
+  
+              }
+  
+              .primary{
+                background: #2962FF;
+                a{
+                  color: white;
+                }
+              }
+              
+              .secondary{
+                background: white;
+                color: #2962FF;
+              }
+            
+            }
+          }
+        }
+      }
+
+      .active{
+        background: #333333;
+        color: white;
+        .points{
+          img{
+            filter:brightness(0) saturate(100%) invert(100%) sepia(67%) saturate(213%) hue-rotate(183deg) brightness(109%) contrast(101%)
+          }
+        }
+      }
+      
+      .inactive{
+        background: white;
+        color: #616161;
+      }
+
+      @include tablet{
+        display: flex;
+        overflow-x: scroll;
+
+        .grid-item{
+          min-width: 40%;
+        }
+      }
+
+      @include mobile{
+        .grid-item{
+          min-width: 80%;
+        }
+      }
+    }
   }
 
 }
-
-
-
-
-
-
-
-// .buttons {
-//   margin-bottom: 10px;
-//   background-color: white;
-//   border-radius: 50px;
-// }
-// .top-main-container{
-//   width: 100%;
-//   height: 900px;
-//   background-color: #F5F5F5;
-//   padding-left: 80px;
-//   padding-right: 80px;
-//   padding-top: 20px;
-//   padding-bottom: 30px;
-// }
-// .images{
-//   margin-top: -27px !important;
-// }
-// .grid-container {
-//   display: flex;
-//   flex-wrap: wrap;
-//   margin-left: 10px;
-//   margin-right: 10px;
-// }
-// .grid-slider{
-//     display: flex;
-//     flex-wrap: wrap;
-//     margin-left: 10px;
-//     margin-right: 10px;
-// }
-// .grid-item {
-//   flex: 1;
-//   margin-right: 10px;
-//   max-width: 400px;
-//   text-align: center;
-//   border-radius: 5px;
-//   background-color: white;
-//   padding-left: 3px;
-// }
-
-// .grid-item img {
-//   max-width: 100%;
-//   // margin-top:-27px !important;
-// }
-// .sub-heading {
-//   text-align: left;
-//   margin-bottom: 5px;
-// }
-// .sub-heading-image{
-//   margin-top: 10px;
-// }
-
-// .color-heading {
-//   color: rgb(119, 189, 190);
-//   text-align: start;
-// }
-// .button-end {
-//   border-radius: 50px;
-//   width: 100px;
-//   margin-left: 10px;
-//   color: white;
-//   background-color: rgb(41, 98, 255);
-//   border: none;
-// }
-
-// .button-end-2nd {
-//   border-radius: 50px;
-//   width: 100px;
-//   margin-left: 10px;
-//   color: rgb(41, 98, 255);
-//   border: none;
-// }
-// .button-end-last {
-//   border-radius: 50px;
-//   width: 150px;
-//   margin-right: 85px;
-//   margin-top: 28px;
-  
-//   color: white;
-//   background-color: rgb(41, 98, 255);
-//   justify-content: start;
-//   text-decoration: none;
-//   border: none;
-// }
-
-// .button-top {
-//   width: 300px;
-//   margin-left: 10px;
-//   height: 55px;
-//   border-radius: 50px;
-//   transition: background-color 0.3s, color 0.3s;
-//   border: none;
-//   background-color: white;
-//   font-weight: 400px;
-//   font-size: 32px;
-//   color: #616161;
-// }
-// #button-top-first{
-//   background-color: green;
-//   color:white;
-// }
-// // .button-top:hover {
-// //   background-color: green;
-// //   color: white;
-// // }
-// #gird-item-last{
-//   background-color: #333333 !important;
-//   color: white;
-  
-// }
-
-// .top-header {
-//   display: flex;
-//   justify-content: space-between;
-//   margin: 40px;
-// }
-// .our-flexible {
-//   margin-left: 20px;
-//   margin-top: 20px;
-// }
-// /* Styles for screens up to 468px */
-// .side-heading-two{
-//   display: flex;
-//   justify-content: center;
-//   display: none;
-// }
-// input{
-//   width: 300px;
-// }
-// .price-heading{
-//   display: flex;
-//   align-items: center;
-// }
-// .side-heading-two{
-//   display: flex;
-//   justify-content: space-between; 
-//   display: none;
-// }
-// .flexing-div{
-//   display: flex;
-//   align-items: center;
-// }
-// @media screen and (max-width: 1100px) {
-
-  
-//   /* CSS rules for screens up to 468px */
-
-//   .top-main-container{
-//     margin-left: 13%;
-//     margin-right: 2%;
-//     padding: 0;
-
-//   }
-//   #top-header {
-//     display: inline;
-//     margin-left: 20px; /* Adjust margin for smaller screens */
-//     margin-right: 20px;
-//     gap: 20px;
-//   }
-//   .side-heading {
-//     display: none;
-//   }
-//   .side-heading-two{
-//     display:inline-block;
-//     margin-left:20% ;
-//     margin-right: 20%;
-    
-    
-//   }
-//   .buttons {
-//     display: none;
-    
-//   }
-//   .grid-container {
-//     display: flex;
-//     align-items: center;
-//     margin: 40px;
-//   }
-//   .images{
-//     display: none;
-//   }
-//   .grid-container{
-//     overflow-x: auto;
-//     scroll-snap-type: x mandatory;
-//     padding : 20px 0;
-//   }
-//   .grid-slider{
-//     display: flex;
-//     flex-wrap: nowrap;
-//   }
-//   .grid-item{
-//     flex:0 0 auto;
-//     width: 100%;
-//     padding: 0 10px
-//   }
-
-// }
-
 
