--- a/public/assets/styles/home-page/_virtual-office-address-for.scss
+++ b/public/assets/styles/home-page/_virtual-office-address-for.scss
@@ -58,8 +58,7 @@
   }
   .virtual_office_main_img {
     margin-bottom: -69px;
-    max-width: 526px;
-    max-height: 761px;
+    max-width: fit-content;
   }
 
   //font design
