--- a/public/assets/styles/home-page/_why-opt-launchwise.scss
+++ b/public/assets/styles/home-page/_why-opt-launchwise.scss
@@ -9,6 +9,9 @@
     margin-top: 100px;
     margin-bottom: 162px;
     
+
+
+    
     @include tablet {
       flex-direction: column;
       margin-bottom: 130px;
@@ -18,7 +21,6 @@
     .first-compoent {
       width: 100%;
       position: relative;
-
 
       .client-container {
         width: 303px;
@@ -36,9 +38,10 @@
           top: 39px;
         }
         @include mobile{
-          width: 200.89px;
+          max-width: 200px;
+          width: 100%;
           height: 318.89px;
-          left: 12px;
+          left: 0;
           top: 39px;
         }
 
@@ -84,9 +87,9 @@
             
         }
         @include mobile{
-            max-width: 150px;
+            width: 65%;
             height: 198.55px;
-            margin-left: 140.21px;
+            margin-left: 40%;
             gap: 0px;
         }
       
