--- a/public/assets/styles/components/landing-page/_newsletter-subscription.scss
+++ b/public/assets/styles/components/landing-page/_newsletter-subscription.scss
@@ -46,6 +46,7 @@
                 appearance: none;
                 background: #F9F9F9;
                 color: #737373;
+                border-radius: 0;
             }
 
             button{
