--- a/public/assets/styles/components/landing-page/_Hero.scss
+++ b/public/assets/styles/components/landing-page/_Hero.scss
@@ -1,8 +1,5 @@
 .container-hero{ 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin-top: 59px;
     .hero-head{
         display: grid;
         gap: 121px;
@@ -18,7 +15,7 @@
         }
         .form{
             width: 481px;
-            height: 589px;
+            height: auto;
             background-color: transparent;
         }
     }
@@ -27,15 +24,15 @@
         .hero-head{
             grid-template-columns: 1fr;
             gap: 40px;
-            margin-top: 68px;
+            margin: 68px 30px;
             h1{
                 font-size: 30px;
                 line-height: 36.57px;
                 text-align: center;
             }
             .form{
-                width: 297px;
-                height: 589px;
+                width: auto;
+                height: auto;
             }
         }
         .hero-box{
@@ -80,7 +77,7 @@
         }
         @media screen and (max-width: 990px){
             grid-template-columns: 1fr;
-            margin-top: 75px;
+            margin: 75px auto;
             width: 100%;
             gap: 30px;
             div{
