--- a/public/assets/styles/components/landing-page/_Hero.scss
+++ b/public/assets/styles/components/landing-page/_Hero.scss
@@ -12,7 +12,6 @@
             font-weight: 800;
             line-height: 58.51px;
             letter-spacing: 0.2px;
-            text-align: center;
         }
         .form{
             width: 481px;
@@ -26,7 +25,7 @@
             grid-template-columns: 1fr;
             gap: 40px;
             margin: 68px 30px;
-            h1{
+            h2{
                 font-size: 30px;
                 line-height: 36.57px;
                 text-align: center;
@@ -55,19 +54,18 @@
         margin-top: -135px;
         div{
             width: 328px;
-            height: 221.53px;
+            height: 100%;
             border-radius: 20px;
             border: 0;
-            padding: 35px 40px;
+            padding: 2rem 2.5rem;
             background-color: #FFFFFF;
             display: flex;
             flex-direction: column;
             gap: 10px;
             box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-            // &:hover{
-            //     background-color: #23A6F0;
-            //     color: #FFFFFF;
-            // }
+            h3{
+                text-wrap: nowrap;
+            }
         }
         @media screen and (max-width: 1024px) {
             gap: 0px;
@@ -85,9 +83,10 @@
                 width: 70%;
             }
         }
-        @media screen and (max-width: 390px) {
+        @include mobile{
             div{
-                height: 270.53px;
+                width: 90%;
+                height: 100%;
             }
         }
     }
