add new section: benefits

--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -44,3 +44,7 @@
 @import "./components/landing-page-two/slider-container";
 @import "./components/landing-page-two/faq";
 @import "./components/landing-page-two//landingpage2footer";
+
+// landing page three
+@import "./components/landing-page-three/benefits";
+
