--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -47,4 +47,5 @@
 
 // landing page three
 @import "./components/landing-page-three/benefits";
+@import "./components/landing-page-three/free-download";
 
