--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -48,4 +48,5 @@
 // landing page three
 @import "./components/landing-page-three/benefits";
 @import "./components/landing-page-three/free-download";
+@import "./components/landing-page-three/all-one-business";
 
