--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -49,4 +49,5 @@
 @import "./components/landing-page-three/benefits";
 @import "./components/landing-page-three/free-download";
 @import "./components/landing-page-three/all-one-business";
+@import "./components/landing-page-three/build-dream";
 
