--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -50,4 +50,5 @@
 @import "./components/landing-page-three/free-download";
 @import "./components/landing-page-three/all-one-business";
 @import "./components/landing-page-three/build-dream";
+@import "./components/landing-page-three/grow-your-business";
 
