--- a/public/assets/styles/components/landing-page-three/_landingpage3-footer.scss
+++ b/public/assets/styles/components/landing-page-three/_landingpage3-footer.scss
@@ -1,9 +1,258 @@
-.landingpage3-footer{
+@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 
+.landingpage3-footer{
     *{
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+    }
+
+    background: white;
+
+    @include mobile{
+        background: radial-gradient(circle at 50% 30%, #3774D760 0%, #FFFFFF 100%);
+    }
+    
+    .container{
+        width: 90%;
+        max-width: 1280px;
+        margin: 0 auto;
+        padding: 6rem 0;
+
+        position: relative;
+
+        @include mobile{
+            padding:0;
+            
+        }
+
+        .hanging-tel-lg{
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            @include tablet{
+                display: none;
+            }
+        }
+        .hanging-tel-sm{
+            display: none;
+            @include mobile{
+                display: block;
+            }
+        }
+
+        .heading{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1.75rem;
+            
+
+            @include mobile{
+                gap: 0.5rem;
+                background: white;
+            }
+
+            div{
+                display: flex;
+                h3{
+                    font-family: Montserrat;
+                    font-size: 44px;
+                    font-weight: 600;
+                    line-height: 54px;
+    
+                    background: linear-gradient(90deg, #004CD2 0%, #00276C 100%);
+                    background-clip: text;
+                    -webkit-background-clip: text;
+                    color: transparent;
+    
+                    @include mobile{
+                        font-size: 24px;
+                        font-weight: 700;
+                        line-height: 30px;
+
+                        padding-top: 1.5rem;
+    
+                        color: #004CD2;
+                        background: white;
+                        background-clip: initial;
+                        -webkit-background-clip: initial;
+                    }
+                    span{
+                        font-family: Montserrat;
+                        font-size: 44px;
+                        font-weight: 600;
+                        line-height: 54px;
+    
+                        text-transform: uppercase;
+                        
+                        @include mobile{
+                            font-size: 24px;
+                            font-weight: 700;
+                            line-height: 30px;
+                            
+                            text-transform: capitalize;
+                            color: #FFA229;
+                        }
+                    }
+                }
+            }
+
+            p{
+                font-family: Montserrat;
+                font-size: 22px;
+                font-weight: 500;
+                line-height: 26.82px;
+                text-align: center;
+                width: 60%;
+
+                @include mobile{
+                    font-family: Montserrat;
+                    font-size: 16px;
+                    font-weight: 500;
+                    line-height: 22.22px;
+                    text-align: left;
+                    width: 100%;
+                }
+
+            }
+        }
+
+        .reach-out{
+            display: flex;
+            justify-content: space-between;
+            width: 90%;
+            margin: 2.5rem auto;
+
+            @include mobile{
+
+                background: white;
+                width: 100%;
+                margin: 0;
+                padding: 1rem 0;
+                justify-content: space-around;
+                flex-direction: row-reverse;
+            }
+
+            .reach-card{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 0.25rem;
+
+                img{
+                    @include mobile{
+                        width: 25px;
+                    }
+                }
+
+                h5{
+                    font-family: Montserrat;
+                    font-size: 12px;
+                    font-weight: 600;
+                    line-height: 16px;
+
+                    text-transform: uppercase;
+
+                    @include mobile{
+                        font-size: 8px;
+                        font-weight: 700;
+                        line-height: 10px;
+                    }
+                }
+
+                p{
+                    font-family: Montserrat;
+                    font-size: 12px;
+                    font-weight: 500;
+                    line-height: 16px;
+                    text-align: center;
+
+                    text-transform: uppercase;
+
+                    @include mobile{
+                        font-size: 8px;
+                        line-height: 10px;
+                    }
+                }
+            }
+
+        }
+
+        .form-and-socials{
+            display: flex;
+            gap: 4.5rem;
+            align-items: center;
+
+            @include mobile{
+                flex-direction: column-reverse;
+                gap: 1.5rem;
+                align-items: flex-start;
+            }
+            .socials{
+                display: flex;
+                flex-direction: column;
+                gap: 1.5rem;
+
+                width: fit-content;
+
+                h5{
+                    font-family: Montserrat;
+                    font-size: 44px;
+                    font-weight: 700;
+                    line-height: 26px;
+
+                    color: #004CD2;
+
+                    @include mobile{
+                        font-size: 32px;
+                        line-height: 26px;
+                    }
+                    
+                    
+                    span{
+                        font-family: Montserrat;
+                        font-size: 44px;
+                        font-weight: 700;
+                        line-height: 26px;
+                        text-align: left;
+
+                        color:#FFA229;
+
+                        @include mobile{
+                            font-size: 32px;
+                            line-height: 26px;
+                        }
+                    }
+                }
+
+                div{
+                    display: flex;
+                    gap: 1.5rem;
+
+                    padding: 0.5rem 1.25rem;
+                    background: linear-gradient(90deg, #004CD2 0%, #204D9E 100%);
+
+                    width: fit-content;
+                    border-radius: 0.5rem;
+                }
+
+                @include mobile{
+                    margin-bottom: 1.5rem;
+                }
+
+            }
+            .form{
+                height: 225px;
+                width: 100%;
+                background: #F5F5F5;
+
+                @include mobile{
+                    background: white;
+                }
+            }
+        }
     }
 
     .copyright{
