Neha : Adding Header and Hero of landing page three

--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -35,6 +35,8 @@
 @import "./components/landing-page/faq";
 @import "./components/landing-page-two/Header";
 @import "./components/landing-page-two/Hero";
+@import "./components/landing-page-three/Header";
+@import "./components/landing-page-three/Hero";
 
 // landing page two
 @import "./components/landing-page-two/get-your-virtual-office";
