--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -49,3 +49,4 @@
 @import "./components/landing-page-three/client-testimonials";
 @import "./components/landing-page-three/faq";
 @import "./components/landing-page-three/landingpage3-footer";
+@import "./components/landing-page-three/landingpage3-test-slider";
