--- a/public/assets/styles/components/landing-page-three/_Whattime.scss
+++ b/public/assets/styles/components/landing-page-three/_Whattime.scss
@@ -96,7 +96,7 @@
         display: flex ;
         justify-content: center ;       
         width: 1294px;
-        margin: 0 12%;
+        margin: 0 9%;
         text-align: center;
     }
     .second-main-container{
@@ -124,6 +124,7 @@
   line-height: 31.14px;
   width: 500px;
   height: 65%;
+  
 
  }
  .underline{
@@ -131,8 +132,10 @@
  }
  .second-main-container{
   text-align: left;
-  margin: 0px 40px;
+  margin: 24px 46px;
   width: 500px;
+  padding-right: 35px;
+  
  }
  .main-image{
   display: none;
