[Changes] moved the slider arrows upwards

--- a/public/assets/styles/components/landing-page-three/_landingpage3-test-slider.scss
+++ b/public/assets/styles/components/landing-page-three/_landingpage3-test-slider.scss
@@ -63,7 +63,11 @@
         }
 
         .left-arrow{
-            transform: translateX(-40px);
+            transform: translateX(-40px) translateY(-150%);
+        }
+        .right-arrow{
+            transform: translateY(-150%);
+            
         }
     }
 }
