--- a/public/assets/styles/components/landing-page-three/_client-testimonials.scss
+++ b/public/assets/styles/components/landing-page-three/_client-testimonials.scss
@@ -19,7 +19,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 0.5rem;
+            gap: 1rem;
             h3{
                 font-family: Montserrat;
                 text-align: center;
@@ -50,9 +50,6 @@
             margin-top: 6rem;
     
             div:nth-child(1){
-                img{
-    
-                }
                 p{
                     max-width: 500px;
                     font-family: Montserrat;
@@ -62,7 +59,7 @@
                     text-align: center;
                     text-transform: capitalize;
     
-                    color: #FFA229;               
+                    color: #FFA229;
     
                     span{
                         font-family: Montserrat;
@@ -84,10 +81,15 @@
                     width: 30%;
                     max-width: 180px;
                     transform: translateX(150%);
+                    margin-top: 0.5rem;
                 }
             }
     
             div:nth-child(2){
+                img{
+                    width: 100%;
+                    object-fit: cover;
+                }
 
                 border-radius: 1rem;
                 overflow: hidden;
@@ -133,7 +135,6 @@
                         display: none;
                     }
                     p{
-                        // width: ;
                         font-family: Montserrat;
                         font-size: 24px;
                         font-weight: 700;
