--- a/public/assets/styles/components/landing-page-three/_Hero.scss
+++ b/public/assets/styles/components/landing-page-three/_Hero.scss
@@ -107,12 +107,19 @@
                 padding: 19px;
                 margin-bottom: 36px;
                 div{
+                    text-align: center;
                     .img-size{
                         @include mobile{
                             width: 7rem;
                         }
                         @media screen and (max-width: 400px) {
                             width: 6rem;
+                        }
+                        @media screen and (max-width: 340px) {
+                            width: 5rem;           
+                        }
+                        @media screen and (max-width: 300px) {
+                            width: 6rem;          
                         }
                     }
                 }
@@ -129,6 +136,10 @@
                     width: 100%;
                     height: auto;
                     padding: 0px;
+                }
+                @media screen and (max-width: 300px) {
+                    display: grid;
+                    grid-gap: 0px;             
                 }
             }
             .user-reviews{
