--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -58,4 +58,5 @@
 @import "./components/landing-page-three/faq";
 @import "./components/landing-page-three/landingpage3-footer";
 @import "./components/landing-page-three/landingpage3-test-slider";
+@import "./components/landing-page-three/what-time-it-is";
 
