--- a/public/assets/styles/components/landing-page-three/_free-download.scss
+++ b/public/assets/styles/components/landing-page-three/_free-download.scss
@@ -1,7 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Sen:wght@400..800&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 .p-three-free-download{
     background-color: #F5F6FC;
     .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        @include tablet{
+            width: 96%;
+            box-shadow: 0px 0px 5px 5px rgba(212, 209, 209, 0.61);
+            border-radius: 12px;
+            background-color: #FFFFFF;  
+            padding: 16px;
+        }
+    .content-container{
+        margin: auto;
         display: flex;
         max-width:983.06px;
         justify-content: space-between;
@@ -9,13 +24,8 @@
         padding: 27px 0;
 
         @include tablet{
-            width: 96%;
             flex-direction: column;
-            padding: 16px;
-            box-shadow: 0px 0px 5px 5px rgba(212, 209, 209, 0.61);  
             gap: 40px;
-            background-color: #FFFFFF;
-            border-radius: 12px;
         }
         .typeography-container{
             max-width: 660px;
@@ -30,7 +40,7 @@
                 background: linear-gradient(270deg, #22417A, #3F78E0);
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
-                background-clip: text; /* Standard property for compatibility */
+                background-clip: text; 
                 font-family: Montserrat;
                 font-size: 52px;
                 font-weight: 800;
@@ -85,33 +95,7 @@
                     
                 }
             }
-            button{
-                width: 361px;
-                height: 68px;
-                gap: 0px;
-                border-radius: 15px;
-                border: none;
-                opacity: 0px;                
-                font-family: Montserrat;
-                font-size: 22px;
-                font-weight: 700;
-                line-height: 29.48px;
-                text-align: left;
-                text-align: center;
-                color: #FFFFFF;
-                background-image: linear-gradient(90deg, #004CD2 0%, #204D9E 100%);
-                box-shadow: 0px 5px 5px rgba(155, 154, 154, 0.61);  
-                
-                    &:hover{
-                        background-image: linear-gradient(90deg, #ffa2298a 0%, #FFA229 100%);
-                        color: blue;
-                    }
-                
-               @include tablet{
-                display: none;
-               }
-    
-            }
+         
             
         }
         .img-container{
@@ -125,7 +109,7 @@
                     gap: 0px;
                 }
                 @include mobile{
-                    max-width: 222.34px;
+                    max-width: 100%;
                     height: 265px;
                     gap: 0px;
                 }
@@ -133,33 +117,114 @@
             }
         }
       
-    .outer-btn{
-        display: none;
-            @include tablet{
-                display: block;
-                margin: auto;
-                left: 16px;
-                padding: 16px;
-                gap: 12px;
-                border-radius: 4px;
-                opacity: 0px;
-                font-family: Montserrat;
-                font-size: 18px;
-                font-weight: 600;
-                line-height: 28.8px;
-                text-align: center;
-                border: none;                
-                color: #FFFFFF;
-                background-image: linear-gradient(90deg, #004CD2 0%, #204D9E 100%);
-                box-shadow: 0px 5px 5px rgba(155, 154, 154, 0.61);  
-                
-                    &:hover{
-                        background-image: linear-gradient(90deg, #ffa2298a 0%, #FFA229 100%);
-                        color: blue;
-                    }
-        }
-    }
     
+    }
+
+    .user-reviews{
+      
+        display: none;
+        @include tablet{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        p{
+            font-family: Product Sans Medium;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 16.98px;
+            text-align: left;
+
+        }
+        
+            .line{
+                width: 0.5px;
+                // border: 0.5px solid #252525;
+                background-color: #252525;
+                border: none;
+                height: 10px;
+                margin-left: 7px;
+                margin-right: 7px;
+                margin-top: 17px;
+
+                @include min-devices{
+                    display:  none;
+                }
+            }
+            .box{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                align-content: center;
+                span{
+              
+
+                    @include tablet{
+                        display: flex;
+                        font-family: Product Sans;
+                        font-size: 14px;
+                        font-weight: 400;
+                        line-height: 16.98px;
+                        text-align: left;
+                        color: #252525;
+                    }
+
+                }
+            }
+           
+            .googleImg{
+                height: 40px;
+                width: 40px;
+                padding: 6px;
+                border-radius: 20px;
+                opacity: 0px;
+
+            }
+            .review-star{
+                width: 12.71px;
+                height: 12px;
+
+            }
+         
+        
+    }
+        button{
+            width: 361px;
+            height: 68px;
+            gap: 0px;
+            border-radius: 15px;
+            border: none;
+            opacity: 0px;                
+            font-family: Montserrat;
+            font-size: 22px;
+            font-weight: 700;
+            line-height: 29.48px;
+            text-align: left;
+            text-align: center;
+            color: #FFFFFF;
+            background-image: linear-gradient(90deg, #004CD2 0%, #204D9E 100%);
+            box-shadow: 0px 5px 5px rgba(155, 154, 154, 0.61);  
+            
+                &:hover{
+                    background-image: linear-gradient(90deg, #ffa2298a 0%, #FFA229 100%);
+                    color: blue;
+                }
+            
+        @include tablet{
+            border-radius: 4px;
+            font-family: Montserrat;
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 28.8px;
+            text-align: center;
+            min-height: 57px;
+            width: 100%;
+            padding: 10px;
+
+        }
+
+        }
     }
 
 }
