--- a/public/assets/styles/components/landing-page-three/_all-one-business.scss
+++ b/public/assets/styles/components/landing-page-three/_all-one-business.scss
@@ -7,9 +7,9 @@
  padding-top: 81px;
  padding-bottom: 88px;
  @include tablet{
-  margin-top: 32px;
-  margin-bottom: 32px;
   padding-top: 32px;
+  padding-bottom: 32px;
+  margin-top: 32px;
   box-shadow: 1px 1px 15px 1px #e7e5e5;
  }
   .container{
