--- a/public/assets/styles/components/landing-page-three/_client-testimonials.scss
+++ b/public/assets/styles/components/landing-page-three/_client-testimonials.scss
@@ -7,6 +7,9 @@
         box-sizing: border-box;
     }
 
+    @include tablet{
+        margin-top: 32px;
+    }
     @include mobile{
         background: white;
     }
