--- a/public/assets/styles/components/landing-page-three/_grow-your-business.scss
+++ b/public/assets/styles/components/landing-page-three/_grow-your-business.scss
@@ -1,11 +1,17 @@
 .p-three-grow-your-business {
   padding-top: 94px;
+  padding-bottom: 125px;
+
+  @include tablet{
+    padding-top: 0;
+    padding-bottom: 0px;
+  }
   .container {
     .heading {
       margin-bottom: 125px;
 
       @include tablet {
-        margin-bottom: 24px;
+        margin-bottom: 20px;
       }
       h2 {
         font-family: Montserrat;
@@ -111,6 +117,7 @@
         display: flex;
         gap: 8px;
         margin: auto;
+        margin-top: 24px;
         max-width: 165px;
         border: none;
         border-radius: 4px;
