--- a/public/assets/styles/components/landing-page-three/_what-time-it-is.scss
+++ b/public/assets/styles/components/landing-page-three/_what-time-it-is.scss
@@ -1,8 +1,10 @@
 .p-three-what-time-container{
 
-    padding-top: 113px;
+    padding-top: 33px;
+    padding-bottom: 54px;
     @include tablet{
-        padding-top: 32px;
+        padding-top: 24px;
+        padding-bottom: 32px;
     }
     .container{
 
