--- a/public/assets/styles/components/landing-page-three/_benefits.scss
+++ b/public/assets/styles/components/landing-page-three/_benefits.scss
@@ -3,14 +3,18 @@
 .p-three-benefits-container{
   position: relative;
   padding-bottom: 74px;
+  padding-top: 50px;
   
   @include tablet{
-    padding-bottom: 32px;
+    margin-top: 14px;
+    padding-top: 12px;
+    padding-bottom: 0px;
+    box-shadow: 0px -8px 5px 1px rgba(216, 215, 215, 0.61);
   }
   .btn-desk{
     button {
       position: absolute;
-      top: 195px;
+      top: 240px;
       left: 0 !important;
       padding:14px;
       gap: 10px;
@@ -154,6 +158,7 @@
           border-radius: 12px;
           padding:0px 20px !important;
           border: 1px solid #fe9e2871;
+          box-shadow: 0px 8px 15px rgba(163, 216, 247, 0.61);  
         }
 
         @include min-devices{
