--- a/public/assets/styles/components/landing-page-three/_build-dream.scss
+++ b/public/assets/styles/components/landing-page-three/_build-dream.scss
@@ -1,8 +1,11 @@
 .p-three-build-dream-container{
 
     padding-top: 113px;
+    padding-bottom: 113px;
     @include tablet{
         padding-top: 32px;
+        padding-bottom: 32px;
+        background-color: #F7F7F7;
     }
     .container{
 
