--- a/public/assets/styles/components/landing-page-three/_free-download.scss
+++ b/public/assets/styles/components/landing-page-three/_free-download.scss
@@ -2,7 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Sen:wght@400..800&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 .p-three-free-download{
+    padding-top: 60px;
+    padding-bottom: 60px;
     background-color: #F5F6FC;
+
+    @include tablet{
+        padding-top: 25px;
+        padding-bottom: 0;
+    }
     .container{
         display: flex;
         flex-direction: column;
@@ -21,7 +28,6 @@
         max-width:983.06px;
         justify-content: space-between;
         align-items: center;
-        padding: 27px 0;
 
         @include tablet{
             flex-direction: column;
